adicionado animacao de loading

--- a/Cadatro_Login/index.html
+++ b/Cadatro_Login/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="./scripts/interacaoComInputs.js" defer></script>
     <script src="./scripts/efeitoDeTransicao.js" defer></script>
+    <script src="./scripts/loading.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -20,6 +21,7 @@
     />
   </head>
   <body>
+    <div class="animacaoLoading"></div>
     <form class="formLogin" action="" id="formularioLogin">
       <fieldset>
         <h2>Faça Login</h2>
