adicionado pagina kanban

--- a/Cadatro_Login/index.html
+++ b/Cadatro_Login/index.html
@@ -6,13 +6,13 @@
     <title>Cadastro | Kanban</title>
     <link
       rel="shortcut icon"
-      href="./assets/logoTipos/favicon.svg"
+      href="../assets/logoTipos/favicon.svg"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="style.css" />
-    <script src="./scripts/interacaoComInputs.js" defer></script>
-    <script src="./scripts/efeitoDeTransicao.js" defer></script>
-    <script src="./scripts/loading.js" defer></script>
+    <script src="./scripts/EfeitosDaPagina/interacaoComInputs.js" defer></script>
+    <script src="./scripts/EfeitosDaPagina/efeitoDeTransicao.js" defer></script>
+    <script src="../assets/efeitoDeLoading/loading.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -72,7 +72,7 @@
 
     <div id="logoTitulo">
       <div id="contentLogoTitulo">
-        <span><img src="./assets/logoTipos/kanbanHub.svg" alt="" />Kanban</span>
+        <span><img src="../assets/logoTipos/kanbanHub.svg" alt="" />Kanban</span>
         <h1>Cadastre-se na nossa plataforma</h1>
       </div>
     </div>
