criação da da pasta funçoesBasica e arquivo funcoesTarefa.js

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="./scripts/efeitosDaPagina/index.js" defer></script>
+    <script src="scripts/FuncoesBasicas/FuncoesTarefa.js" defer></script>
     <script src="../assets/efeitoDeLoading/loading.js"></script>
     <title>Quadro Kanban</title>
     <link rel="shortcut icon" href="../assets/logoTipos/favicon.svg" type="image/x-icon" />
@@ -255,5 +256,6 @@
         </ul>
       </div>
     </main>
+
   </body>
 </html>
