--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -74,8 +74,7 @@
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Voluptas ab eos quae eveniet minus
+                a
               </p>
             </div>
             <div class="task-end">
@@ -91,6 +90,8 @@
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
               <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                animi modi esse, atque recusandae tempof:
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
                 animi modi esse, atque recusandae tempof:
               </p>
