--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -257,7 +257,7 @@
         </div>
 
         <ul class="list_Tasks_Completed">
-       <!-- <li class="task-item">
+        <li class="task-item">
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
               <p>
