--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="media.css" />
-    <script src="./scripts/efeitosDaPagina/index.js" defer></script>
+    <script src="./scripts/index.js" defer></script>
     <script src="../assets/efeitoDeLoading/loading.js"></script>
     <title>Quadro Kanban</title>
     <link
@@ -31,7 +31,7 @@
       <form
         id="containerEntries"
         class="containerEntriesData"
-        onsubmit="event.preventDefault()"
+        name="formMain"
       >
         <h2>Criar Nova Tarefa</h2>
         <label for="titulo">Digite o título da tarefa</label>
@@ -64,7 +64,7 @@
       <form
         id="editTasksForm"
         class="containerEntriesData"
-        onsubmit="event.preventDefault()"
+        name="formsEditar"
       >
         <h2>Editar Tarefa</h2>
         <label for="editarTitulo">Editar Título da tarefa</label>
@@ -100,6 +100,7 @@
           </button>
         </div>
       </form>
+
     </div>
 
     <main class="container" id="containerAllTasks">
@@ -113,21 +114,8 @@
           </button>
         </div>
 
-        <ul class="listTasks">
-          <li class="task-item">
-            <h2 class="title-task">Titulo da Task</h2>
-            <div class="task-details">
-              <p>a</p>
-            </div>
-            <div class="task-end">
-              <div class="buttons-Tasks">
-                <button class="edit-button"></button>
-                <button class="remove-button"></button>
-                <button class="modal-button"></button>
-              </div>
-              <data class="task-deadline">15/11/2023</data>
-            </div>
-          </li>
+        <ul class="list_Tasks_ToDo">
+         
         </ul>
       </div>
 
@@ -145,14 +133,11 @@
           </button>
         </div>
 
-        <ul class="listTasks">
-          <li class="task-item">
+        <ul class="list_Tasks_In_Progress">
+          <!-- <li class="task-item">
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                animi modi esse, atque recusandae tempof:
-              </p>
+              <p>a</p>
             </div>
             <div class="task-end">
               <div class="buttons-Tasks">
@@ -162,24 +147,7 @@
               </div>
               <data class="task-deadline">15/11/2023</data>
             </div>
-          </li>
-          <li class="task-item">
-            <h2 class="title-task">Titulo da Task</h2>
-            <div class="task-details">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                animi modi esse, atque recusandae tempof:
-              </p>
-            </div>
-            <div class="task-end">
-              <div class="buttons-Tasks">
-                <button class="edit-button"></button>
-                <button class="remove-button"></button>
-                <button class="modal-button"></button>
-              </div>
-              <data class="task-deadline">15/11/2023</data>
-            </div>
-          </li>
+          </li> -->
         </ul>
       </div>
 
@@ -193,58 +161,8 @@
           </button>
         </div>
 
-        <ul class="listTasks">
-          <li class="task-item">
-            <h2 class="title-task">Titulo da Task</h2>
-            <div class="task-details">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                animi modi esse, atque recusandae tempof:
-              </p>
-            </div>
-            <div class="task-end">
-              <div class="buttons-Tasks">
-                <button class="edit-button"></button>
-                <button class="remove-button"></button>
-                <button class="modal-button"></button>
-              </div>
-              <data class="task-deadline">15/11/2023</data>
-            </div>
-          </li>
-          <li class="task-item">
-            <h2 class="title-task">Titulo da Task</h2>
-            <div class="task-details">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                animi modi esse, atque recusandae tempof:
-              </p>
-            </div>
-            <div class="task-end">
-              <div class="buttons-Tasks">
-                <button class="edit-button"></button>
-                <button class="remove-button"></button>
-                <button class="modal-button"></button>
-              </div>
-              <data class="task-deadline">15/11/2023</data>
-            </div>
-          </li>
-          <li class="task-item">
-            <h2 class="title-task">Titulo da Task</h2>
-            <div class="task-details">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-                animi modi esse, atque recusandae tempof:
-              </p>
-            </div>
-            <div class="task-end">
-              <div class="buttons-Tasks">
-                <button class="edit-button"></button>
-                <button class="remove-button"></button>
-                <button class="modal-button"></button>
-              </div>
-              <data class="task-deadline">15/11/2023</data>
-            </div>
-          </li>
+        <ul class="list_Tasks_Completed">
+         
         </ul>
       </div>
     </main>
