problema do visual corrigido

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -114,7 +114,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_ToDo">
+        <ul class="list_Tasks_ToDo listTasks">
          
         </ul>
       </div>
@@ -133,7 +133,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_In_Progress">
+        <ul class="list_Tasks_In_Progress listTasks">
           <!-- <li class="task-item">
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
@@ -161,7 +161,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_Completed">
+        <ul class="list_Tasks_Completed listTasks">
          
         </ul>
       </div>
