adicionado frontend do remover

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -101,6 +101,12 @@
         </div>
       </form>
 
+      <div id="confirmacaoDeRemocaoDeTask">
+        <h2>Tem certeza que deseja excluir?</h2>
+        <button id="removerTask">Excluir</button>
+        <button class="cancelTask">Cancelar</button>
+      </div>
+
     </div>
 
     <main class="container" id="containerAllTasks">
