--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -65,7 +65,7 @@
       <form
         id="editTasksForm"
         class="containerEntriesData"
-        name="formsEditar"
+        name="formEditar"
       >
         <h2>Editar Tarefa</h2>
         <label for="editarTitulo">Editar Título da tarefa</label>
