adicionado cards personalizados

--- a/Cadatro_Login/index.html
+++ b/Cadatro_Login/index.html
@@ -24,6 +24,16 @@
     
     <div class="animacaoLoading"></div>
 
+    <!-- Card personalizado do Erro -->
+    <div id="cardDeMensagemPersonalizado">
+      <button id="fecharCard"><img src="./assets/iconesCardsDaMensagem/close.svg" alt=""></button>
+      <div id="containerPrincipalDaMensagem">
+      <img src="" alt="">
+      <h2 id="textoDaMensagem"></h2>
+      </div>
+      <hr id="bordaInferior">
+    </div>
+
     <form class="formLogin" action="" id="formularioLogin">
 
       <fieldset>
