Funcionalidade de mover tarefas finalizado

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -123,7 +123,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_ToDo listTasks">
+        <ul class="list_Tasks_ToDo listTasks" data-coluna="afazer">
          
         </ul>
       </div>
@@ -142,7 +142,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_In_Progress listTasks">
+        <ul class="list_Tasks_In_Progress listTasks" data-coluna="emandamento">
           <!-- <li class="task-item">
             <h2 class="title-task">Titulo da Task</h2>
             <div class="task-details">
@@ -170,7 +170,7 @@
           </button>
         </div>
 
-        <ul class="list_Tasks_Completed listTasks">
+        <ul class="list_Tasks_Completed listTasks" data-coluna="concluido">
          
         </ul>
       </div>
