adicionado localStorage dos cards

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -12,6 +12,7 @@
     <script src="./scripts/editar_Tasks/script.js" defer></script>
     <script src="./scripts/excluir_Tasks/script.js" defer></script>
     <script src="./scripts/mudar_Status_Da_Task/script.js" defer></script>
+    <script src="./scripts/tasks_No_Local_Storage/script.js" defer></script>
     
     
     <script src="./scripts/frontEnd_Do_Kanban/script.js" defer></script>
@@ -34,6 +35,7 @@
     <div class="animacaoLoading"></div>
     <nav class="nav_Bar">
       <h1 class="title_Primary">Área do usuário</h1>
+      <button id="logout"><img src="./assets/logout.svg" alt=""></button>
     </nav>
 
     <div id="containerForms">
