editar no localStorage funcionando

--- a/Pagina_Kanban/index.html
+++ b/Pagina_Kanban/index.html
@@ -112,6 +112,7 @@
           <button class="styleButtonsForm cancelTask" type="button">
             Cancelar
           </button>
+          <input type="hidden" id="idDaTask">
         </div>
       </form>
 
